[project]
name = "panel-fastapi-experiments"
description = "An example repository for experimenting with Panel and FastAPI."
version = "0.1.0"
readme = "README.MD"
keywords = ["panel", "fastapi"]
license = {text = "mit"}
requires-python = ">=3.11"

classifiers = [
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "bokeh-fastapi",
    "fastapi",
    "panel",
]

[project.optional-dependencies]
dev = [
    "fastapi[standard]",
    "watchfiles",    
]